src/objects/Deliverables__c.object
<CustomObject>
    <description>BME - This object will be used to track all the deliverable of a project or a particular release of a Project</description>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <inlineHelpText>This field will be populated from workflow when the status of the deliverable is changed to completed</inlineHelpText>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>% Completed</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_s__c</fullName>
        <inlineHelpText>Enter all the names of all the owners of this Deliverable</inlineHelpText>
        <label>Owner(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Completion_Date__c</fullName>
        <inlineHelpText>Select the Date for which this Deliverable is planned to be completed</inlineHelpText>
        <label>Planned Completion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Phase__c</fullName>
        <inlineHelpText>Select the phase of the project for which this deliverable is due</inlineHelpText>
        <label>Release Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <inlineHelpText>Select the Release to which this Deliverable is related</inlineHelpText>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Deliverable</relationshipLabel>
        <relationshipName>Deliverable</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reviewer_s_and_Approver_s__c</fullName>
        <inlineHelpText>Enter the names of all the Reviewers and Approvers of this Deliverable</inlineHelpText>
        <label>Reviewer(s) and Approver(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed-Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deliverable</label>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>